--- a/Resources/Private/Translations/de/Main.xlf
+++ b/Resources/Private/Translations/de/Main.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-  <file original="" product-name="MOC.Varnish" source-language="en" datatype="plaintext" target-language="de">
+  <file original="" product-name="Flowpack.Varnish" source-language="en" datatype="plaintext" target-language="de">
     <body>
     </body>
   </file>
